updated the pensions

--- a/app/views/lis/8/partner/pension/other-pension.html
+++ b/app/views/lis/8/partner/pension/other-pension.html
@@ -13,8 +13,25 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you get another pension?
+    Does your partner get another pension?
   </h1>
+      
+      <!--
+  <p>You have already told us about:</p>
+  <ul>
+    <li>
+      <span style="width: 35%; float: left;">State pension</span>
+      <span style="width: 35%; float: left;">£42 per week</span>
+    </li>
+    <li>
+      <span style="width: 35%; float: left;">Pension 2</span>
+      <span style="width: 35%; float: left;">£25 per week</span>
+    </li>
+  </ul>
+  <br>
+  <br>
+-->
+
       
   <form action="otherpen-handler" method="get" class="form">
 
@@ -22,14 +39,14 @@
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="a-yes" name="pension" value="a-yes">
-            <label class="form-control-radio" for="a-yes">
+            <input type="radio" id="p-yes" name="pension" value="p-yes">
+            <label class="form-control-radio" for="p-yes">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="a-no" name="pension" value="a-no">
-            <label class="form-control-radio" for="a-no">
+            <input type="radio" id="p-no" name="pension" value="p-no">
+            <label class="form-control-radio" for="p-no">
               No
             </label>
           </div>
