--- a/app/views/lis/8/partner/pension/pensionamount.html
+++ b/app/views/lis/8/partner/pension/pensionamount.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    How often do you get the payments for your {{pensionNumber}} pension?
+    How often do they get the payments for their {{pensionNumber}} pension?
   </h1>
 
   <form action="" method="get" class="form">
@@ -53,7 +53,7 @@
     {{
       form_macros.amount_field({
         id: 'money-amount',
-        label: 'How much do you get?'
+        label: 'How much do they get?'
       })
     }}
 
