--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -62,25 +62,35 @@
         <table class="data-table you-summary">
           <tr>
             <td>Do you get a pension?</td>
-            <td>Yes</td>
-            <td><a href="pension/pension">Change this</a></td>
+            <td id="pension_answer">{{pensionanswer}}</td>
+            <td><a href="pension/newpension">Change this</a></td>
           </tr>
-          <tr>
+          <tr id="credit_row">
             <td>Do you get Pension Credit Savings Credit?</td>
-            <td>{{savingscredit}}</td>
+            <td id="credit_answer">{{savingscredit}}</td>
             <td><a href="pension/pension-credit">Change this</a></td>
           </tr>
-          <tr>
+          <tr id="credit_payments_row">
             <td>Your Pension Credit Savings Credit payments?</td>
             <td>£121 per week</td>
             <td><a href="pension/private-pension-amount">Change this</a></td>
           </tr>
-          <tr>
+          <tr id="state_pension_answer">
+            <td>Do you get a state pension?</td>
+            <td id="state_pension_answer">{{stateensionanswer}}</td>
+            <td><a href="pension/pension">Change this</a></td>
+          </tr>
+          <tr id="state_payments_row">
             <td>About your state pension</td>
             <td>£{{statepensionamount}} {{statepensionfrequency}}</td>
             <td><a href="pension/pension-amount">Change this</a></td>
           </tr>
-          <tr>
+          <tr id="private_pension_answer">
+            <td>Do you get another pension?</td>
+            <td id="state_pension_answer">{{pensionanswer}}</td>
+            <td><a href="pension/pension">Change this</a></td>
+          </tr>
+          <tr id="private_payments_row">
             <td>About your private pension</td>
             <td>£321 per week</td>
             <td><a href="pension/private-pension-amount">Change this</a></td>
