--- a/app/views/lis/8/you/pension/newpension.html
+++ b/app/views/lis/8/you/pension/newpension.html
@@ -21,14 +21,14 @@
             <fieldset>
               <div class="inline-form-groups">
                 <div class="form-group">
-                  <input type="radio" id="binary-yes" name="pension" value="yes">
-                  <label class="form-control-radio" for="binary-yes">
+                  <input type="radio" id="yes" name="pension" value="yes">
+                  <label class="form-control-radio" for="yes">
                     Yes
                   </label>
                 </div>
                 <div class="form-group">
-                  <input type="radio" id="binary-no" name="pension" value="no">
-                  <label class="form-control-radio" for="binary-no">
+                  <input type="radio" id="no" name="pension" value="no">
+                  <label class="form-control-radio" for="no">
                     No
                   </label>
                 </div>
