pensions summary is now build as the questions are answered

--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -59,6 +59,29 @@
         </table>
 
         <p class="bold">Pensions</p>
+        <ul class="hidden">
+          <li>pensionanswer:</li>
+          <li id="pension_answer">{{pensionanswer}}</li>
+          <li>savingscredit:</li>
+          <li id="credit_answer">{{savingscredit}}</li>
+          <li>stateanswer:</li>
+          <li id="state_answer">{{stateanswer}}</li>
+          <li>privateanswer:</li>
+          <li id="private_answer">{{privateanswer}}</li>
+          <li>statepensionamount:</li>
+          <li id="state_amount">{{stateamount}}</li>
+          <li>statepensionamount:</li>
+          <li id="state_frequency">{{statepensionfrequency}}</li>
+          <li>privatepension amount:</li>
+          <li id="private_amount">{{privateAmount}}</li>
+          <li>private frequency:</li>
+          <li id="private_frequency">{{privatefrequency}}</li>
+        </ul>
+        
+        <table class="data-table you-summary" id="pension_table">
+          <!-- filled by js -->
+        </table>
+<!--        <p class="bold">Pensions</p>
         <table class="data-table you-summary">
           <tr>
             <td>Do you get a pension?</td>
@@ -96,6 +119,7 @@
             <td><a href="pension/private-pension-amount">Change this</a></td>
           </tr>
         </table>
+-->
 
         <p class="bold">Benefits and other money</p>
         <table class="data-table you-summary">
