--- a/app/views/lis/8/you/pension/pensionamount.html
+++ b/app/views/lis/8/you/pension/pensionamount.html
@@ -16,53 +16,54 @@
     How often do you get the payments for your {{pensionNumber}} pension?
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="p-amount-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="week" name="minor">
+        <input type="radio" id="week" value="week" name="frequency">
         <label class="form-control-radio" for="week">
           Every week
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="fortnight" name="minor">
+        <input type="radio" id="fortnight" value="fortnight" name="frequency">
         <label class="form-control-radio" for="fortnight">
           Every 2 weeks
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="fourweekly" name="minor">
+        <input type="radio" id="fourweekly" value="fourweekly" name="frequency">
         <label class="form-control-radio" for="fourweekly">
           Every 4 weeks
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="month" name="minor">
+        <input type="radio" id="month" value="month" name="frequency">
         <label class="form-control-radio" for="month">
          Every calendar month
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="year" name="minor">
+        <input type="radio" id="year" value="year" name="frequency">
         <label class="form-control-radio" for="year">
           Once a year
         </label>
       </div>
 
-    {{
-      form_macros.amount_field({
-        id: 'money-amount',
-        label: 'How much do you get?'
-      })
-    }}
+      <div class="form-item-wrapper">
+        <div class="form-group">
+          <label class="form-label-bold" for="money-amount">
+            How much do you get?
+          </label>
+          <p class="amount">£</p><input type="text" id="money-amount" name="moneyamount" class="form-control">
+        </div>
+      </div>
 
     </div>
 
     {{
       form_macros.button({
-        label: 'Save and continue',
-        href : 'other-pension'
+        label: 'Save and continue'
       })
     }}
     <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
