small changes to routes

--- a/app/views/lis/8/you/pension/pensionamount.html
+++ b/app/views/lis/8/you/pension/pensionamount.html
@@ -20,8 +20,8 @@
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="week" value="week" name="frequency">
-        <label class="form-control-radio" for="week">
+        <input type="radio" id="weekly" value="weekly" name="frequency">
+        <label class="form-control-radio" for="weekly">
           Every week
         </label>
       </div>
