--- a/app/views/lis/8/assets/property.html
+++ b/app/views/lis/8/assets/property.html
@@ -15,10 +15,10 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do {{partnerortext}} own any property or land?
-  </h1>
+    Do {{partnerortext}} own any property or land?</h1>
+    <h2 class="heading-medium">Do not include where you live.</h2>
 
-  <p>Do not include where you live. The property or land can be in the United Kingdom
+  <p>The property or land can be in the United Kingdom
 or overseas.</p>
 
   <form action="land-handler" method="get" class="form">
