pension journey shortened

--- a/app/views/lis/0/registration/partner.html
+++ b/app/views/lis/0/registration/partner.html
@@ -41,7 +41,8 @@
     
         {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+        href : 'partners-details'
       })
     }}
   </form>
