--- a/app/views/lis/0/you/benefits/benefits.html
+++ b/app/views/lis/0/you/benefits/benefits.html
@@ -18,7 +18,7 @@
       
       <p>Social security benefits include...</p>
       
-      <form action="benefit-handler" method="get" class="form">
+      <form action="" method="get" class="form">
         
         <div class="form-item-wrapper">
           <label class="form-label-bold" for="textarea">
@@ -44,7 +44,8 @@
 
             {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Save and continue',
+        href : 'benefit-group1'
           })
         }}
 
