--- a/app/views/lis/0/you/benefits/pension.html
+++ b/app/views/lis/0/you/benefits/pension.html
@@ -36,9 +36,10 @@
             </fieldset>
           </div>
 
-            {{
+        {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Save and continue',
+            href: 'pension-type'
           })
         }}
 
