--- a/app/views/lis/1/ko.html
+++ b/app/views/lis/1/ko.html
@@ -16,7 +16,7 @@
       Do you receive any of the following?
   </h1>
 
-  <form action="kickout-handler" method="get" class="form">
+  <form action="ko-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="radio" id="cbsa" name="kickout">
