--- a/app/views/lis/1/you/pension/pension.html
+++ b/app/views/lis/1/you/pension/pension.html
@@ -16,7 +16,7 @@
         Do you receive a pension?
       </h1>
   
-      <form action="pension-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
@@ -38,7 +38,8 @@
 
             {{
           form_macros.button({
-            label: 'Next'
+            label: 'Next',
+            href : 'pension-credit'
           })
         }}
         <!--
