--- a/app/views/lis/2/assets/accounts.html
+++ b/app/views/lis/2/assets/accounts.html
@@ -33,7 +33,7 @@
 
     {{
       form_macros.button({
-        href: 'other',
+        href: 'other-assets',
         label: 'Next'
       })
     }}
