--- a/app/views/lis/2/live/home.html
+++ b/app/views/lis/2/live/home.html
@@ -16,7 +16,7 @@
       Where do you live?
   </h1>
 
-  <form action="home-handler" method="get" class="form">
+  <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
@@ -47,7 +47,8 @@
         
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+        href : 'mortgaged/joint'
       })
     }}
     
