--- a/app/views/lis/2/you/pension/pension-amount.html
+++ b/app/views/lis/2/you/pension/pension-amount.html
@@ -57,7 +57,8 @@
         
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+        href : 'private-pension-amount'
       })
     }}
     <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
