--- a/app/views/lis/3/assets/premium-bonds.html
+++ b/app/views/lis/3/assets/premium-bonds.html
@@ -19,7 +19,7 @@
     <!--<span class="form-hint">Please tell us the combined face value of all of the premium bonds you have</span>-->
   </h1>
 
-  <form action="premium-bond-handler" method="get" class="form">
+  <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
 
@@ -33,7 +33,8 @@
 
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+    href : 'other-assets'
       })
     }}
     
