--- a/app/views/lis/3/live/others/people.html
+++ b/app/views/lis/3/live/others/people.html
@@ -16,7 +16,7 @@
     Does anyone else live in your home with you?
   </h1>
     
-  <form action="people-handler" method="get" class="form">
+  <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
@@ -38,7 +38,8 @@
     
         {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+    href : 'others-name'
       })
     }}
         
