--- a/app/views/lis/3/you/benefits/aa.html
+++ b/app/views/lis/3/you/benefits/aa.html
@@ -37,7 +37,8 @@
 
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+    href : 'ctc'
       })
     }}
     
