--- a/app/views/lis/3/you/benefits/dla.html
+++ b/app/views/lis/3/you/benefits/dla.html
@@ -65,8 +65,8 @@
 
     {{
       form_macros.button({
-        label: 'Save and continue',
-        href: 'mobility-component' 
+        label : 'Save and continue',
+        href : 'pip' 
       })
     }}
     
