--- a/app/views/lis/3/you/benefits/mob-component.html
+++ b/app/views/lis/3/you/benefits/mob-component.html
@@ -17,7 +17,7 @@
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
       
-  <form action="dla-handler" method="get" class="form">
+  <form action="" method="get" class="form">
 <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
@@ -66,6 +66,7 @@
     {{
       form_macros.button({
         label: 'Save and continue',
+    href 'pip'
       })
     }}
     
