--- a/app/views/lis/0/you/work.html
+++ b/app/views/lis/0/you/work.html
@@ -38,7 +38,8 @@
 
         {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Save and continue',
+            href : 'work-type'
           })
         }}
 
