--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -65,7 +65,7 @@
 
             {{
           form_macros.button({
-            href: 'other',
+            href: 'other-assets',
             label: 'Next'
           })
         }}
