--- a/app/views/lis/2/assets/money.html
+++ b/app/views/lis/2/assets/money.html
@@ -17,7 +17,7 @@
         <span class="form-hint">Tick all that apply</span>
       </h1>
       
-  <form action="account-type-handler" method="get" class="form">
+  <form action="" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="checkbox" id="bank" name="banktype" value="bank">
@@ -71,7 +71,8 @@
 
             {{
           form_macros.button({
-            label: 'Next'
+            label: 'Next',
+            href : 'accounts'
           })
         }}
 
