--- a/app/views/lis/2/live/others/blind.html
+++ b/app/views/lis/2/live/others/blind.html
@@ -38,7 +38,7 @@
 
         {{
           form_macros.button({
-            href: 'people',
+            href: '../living-summary',
             label: 'Next'
           })
         }}
