--- a/app/views/lis/2/you/pension/pension-type.html
+++ b/app/views/lis/2/you/pension/pension-type.html
@@ -17,7 +17,7 @@
   </h1>
   <p>Tick all that apply</p>
 
-  <form action="pension-type-handler" method="get" class="form">
+  <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
@@ -54,7 +54,8 @@
         
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+        href : 'pension-amount'
       })
     }}
     <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
