--- a/app/views/lis/2/you/pension/pension.html
+++ b/app/views/lis/2/you/pension/pension.html
@@ -38,7 +38,8 @@
 
             {{
           form_macros.button({
-            label: 'Next'
+            label: 'Next',
+          href : 'pension-credit'
           })
         }}
       <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
