--- a/app/views/lis/3/assets/accounts.html
+++ b/app/views/lis/3/assets/accounts.html
@@ -15,11 +15,11 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    What is the total amount {{partnerandtext}} have in bank, building society or savings accounts?
+    What is the total amount you have in bank, building society or savings accounts?
     <span class="form-hint">Please tell us the combined amount from all of the accounts you have</span>
   </h1>
 
-  <form action="bank-savings-handler" method="get" class="form">
+  <form action="" method="get" class="form">
 
 <div class="form-item-wrapper">
 
@@ -33,7 +33,8 @@
 
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+    href : 'premium-bonds'
       })
     }}
     
