--- a/app/views/lis/3/assets/property.html
+++ b/app/views/lis/3/assets/property.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do {{partnerortext}} have any property or land in this country or abroad?
+    Do you have any property or land in this country or abroad?
     <span class="form-hint">Do not include the house where you live</span>
   </h1>
 
@@ -40,7 +40,7 @@
 
     {{
       form_macros.button({
-        href: 'money',
+        href: 'newmoney',
         label: 'Save and continue'
       })
     }}
