--- a/app/views/lis/3/care-home.html
+++ b/app/views/lis/3/care-home.html
@@ -16,7 +16,7 @@
     Are you living permanently in a care home?
   </h1>
   
-  <form action="carehome-handler" method="get" class="form">
+  <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
@@ -38,7 +38,8 @@
     
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Next',
+        href : 'lis-home'
       })
     }}
 
