--- a/app/views/lis/3/partner/partner.html
+++ b/app/views/lis/3/partner/partner.html
@@ -18,7 +18,7 @@
   
   <p class="form-hint">We use the term partner to mean a person you live with as part of a couple of the same or opposite sex, whether or not you are married or in a civil partnership.</p>
 
-  <form action="partner-handler" method="get" class="form">
+  <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
@@ -40,7 +40,8 @@
     
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+    href : 'basic'
       })
     }}
     <p class="navigation"><a class="cancel" href="../lis-home2">Save and come back later</a></p>
