--- a/app/views/lis/3/you/benefits/ctc.html
+++ b/app/views/lis/3/you/benefits/ctc.html
@@ -45,7 +45,8 @@
         
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+    href : 'dla'
       })
     }}
     <p class="navigation"><a class="cancel" href="../../lis-home">Save and come back later</a></p>
