--- a/app/views/lis/3/you/registration.html
+++ b/app/views/lis/3/you/registration.html
@@ -44,7 +44,8 @@
 
     {{
       form_macros.button({
-        label: 'Save and continue'
+        label: 'Save and continue',
+        href : 'contact-prefs'
       })
     }}
     <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
