--- a/app/views/lis/3/you/work.html
+++ b/app/views/lis/3/you/work.html
@@ -16,7 +16,7 @@
         Do you have a job?
       </h1>
   
-      <form action="work-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
@@ -38,7 +38,8 @@
 
         {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Save and continue',
+            href : 'education'
           })
         }}
 
