--- a/app/views/lis/8/live/mortgaged/joint-own.html
+++ b/app/views/lis/8/live/mortgaged/joint-own.html
@@ -1,4 +1,4 @@
- {% extends 'templates/nhs_transaction_layout.html' %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
 {% block afterHeader %}
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-   {{jointownertext}}
+   {{jointOwnerText}}
   </h1>
 
   <form action="" method="get" class="form">
