changed the partner pension question

--- a/app/views/lis/8/partner/education.html
+++ b/app/views/lis/8/partner/education.html
@@ -40,7 +40,7 @@
           {{
             form_macros.button({
               label: 'Save and continue',
-              href: 'pension/newpension'
+              href: 'pension/newpartnerpension'
             })
           }}
 
