--- a/app/views/lis/8/lis-home.html
+++ b/app/views/lis/8/lis-home.html
@@ -34,7 +34,7 @@
           <tr class='clickable-row' data-href='assets/property'>
             <td>Property, savings &amp; money</td>
             <td><span id="property_status" class="notstarted-text">{{propertyStatus}}</span>
-            <a href="assets/property">{{propertyLink}}</a></td>
+            <a href="assets/address-prop">{{propertyLink}}</a></td>
           </tr>
         </table>
 
