--- a/app/views/lis/8/live/mortgaged/address.html
+++ b/app/views/lis/8/live/mortgaged/address.html
@@ -16,11 +16,11 @@
       What is your address?
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="otherProp-handler" method="get" class="form">
 
     {{
       form_macros.text_field({
-        id: 'address-line-one',
+        id: 'addressLineone',
         label: 'Building and street'
       })
     }}
