--- a/app/views/lis/8/assets/address-prop.html
+++ b/app/views/lis/8/assets/address-prop.html
@@ -12,41 +12,47 @@
   <div class="grid-row">
     <div class="column-two-thirds">
 
+  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
+
   <h1 class="heading-large">
-    Do {{partnerbothtext}} have more than  £16,000 in savings, investments and properties?
-  </h1>
+    Do {{partnerortext}} own any other property or land other than {{addressLineone}}?</h1>
 
-  <p>Property does not include where you live.</p>
+  <p>The property or land can be in the United Kingdom
+or overseas.</p>
 
-  <form action="savings-ko-handler" method="get" class="form">
+  <form action="otherProp-handler" method="get" class="form">
+
     <div class="form-item-wrapper">
       <fieldset>
         <div class="inline-form-groups">
           <div class="form-group">
-            <input type="radio" id="yes" name="savings" value="yes">
+            <input type="radio" id="yes" name="property" value="yes">
             <label class="form-control-radio" for="yes">
               Yes
             </label>
           </div>
           <div class="form-group">
-            <input type="radio" id="no" name="savings" value="no">
+            <input type="radio" id="no" name="property" value="no">
             <label class="form-control-radio" for="no">
               No
             </label>
           </div>
         </div>
-      </fieldset>
-    </div>
 
     {{
       form_macros.button({
-        label: 'Next'
+        label: 'Save and continue'
       })
     }}
 
+    <p class="navigation"><a class="cancel" href="../lis-home">Save and come back later</a></p>
+
   </form>
-    </div>
-    </div>
+
+  </div>
+
+  </div>
+
 </main>
 
 {% endblock %}
