fixed the pension counter so that it resets when the nhs logo is clicked

--- a/app/views/lis/8/you/about-you-summary.html
+++ b/app/views/lis/8/you/about-you-summary.html
@@ -141,7 +141,7 @@
              <tr>
             <td>Do you get any other money?</td>
             <td>No</td>
-            <td><a href="benefits/other-money">Change this</a></td>
+            <td><a href="">Change this</a></td>
           </tr>
         </table>
 
