--- a/app/views/lis/8/assets/address-prop.html
+++ b/app/views/lis/8/assets/address-prop.html
@@ -15,10 +15,14 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do {{partnerortext}} own any other property or land other than {{applicantaddress}}?</h1>
+    Do {{partnerortext}} own any other property or land?
+  </h1>
+  
+  <h1 class="heading-medium">
+    Do not include {{applicantaddress}}.
+  </h1>
 
-  <p>The property or land can be in the United Kingdom
-or overseas.</p>
+  <p>Include property you own in any country.</p>
 
   <form action="otherProp-handler" method="get" class="form">
 
