--- a/app/views/lis/8/assets/address-prop.html
+++ b/app/views/lis/8/assets/address-prop.html
@@ -15,8 +15,10 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do {{partnerortext}} own any other property or land other than {{applicantaddress}}?
+    Do {{partnerortext}} own any other property or land?
   </h1>
+      
+  <h2 class="heading-medium">Do not include {{applicantaddress}}</h2>
 
   <p>Include property you own in any country.</p>
 
