--- a/app/views/lis/8/lis-home.html
+++ b/app/views/lis/8/lis-home.html
@@ -31,7 +31,7 @@
             <td><span id="where_you_live_status" class="notstarted-text">{{whereYouLiveStatus}}</span>
             <a href="live/you-live">{{whereYouLiveLink}}</a></td>
           </tr>
-          <tr class='clickable-row' data-href='assets/property'>
+          <tr class='clickable-row' data-href='assets/address-prop'>
             <td>Property, savings &amp; money</td>
             <td><span id="property_status" class="notstarted-text">{{propertyStatus}}</span>
             <a href="assets/address-prop">{{propertyLink}}</a></td>
